[package]
name = "parachain-template-node"
version = "0.1.0"
authors = ["Anonymous"]
description = "A new Cumulus FRAME-based Substrate Node, ready for hacking together a parachain."
license = "Unlicense"
homepage = "https://substrate.io"
repository.workspace = true
edition.workspace = true
build = "build.rs"
publish = false

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
log = "0.4.20"
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { version = "1.0.188", features = ["derive"] }
jsonrpsee = { version = "0.16.2", features = ["server"] }
futures = "0.3.28"
serde_json = "1.0.108"

# Local
parachain-template-runtime = { path = "../runtime" }

# Substrate
frame-benchmarking = { version = "*" }
frame-benchmarking-cli = { version = "*" }
pallet-transaction-payment-rpc = { version = "*" }
sc-basic-authorship = { version = "*" }
sc-chain-spec = { version = "*" }
sc-cli = { version = "*" }
sc-client-api = { version = "*" }
sc-offchain = { version = "*" }
sc-consensus = { version = "*" }
sc-executor = { version = "*" }
sc-network = { version = "*" }
sc-network-sync = { version = "*" }
sc-rpc = { version = "*" }
sc-service = { version = "*" }
sc-sysinfo = { version = "*" }
sc-telemetry = { version = "*" }
sc-tracing = { version = "*" }
sc-transaction-pool = { version = "*" }
sc-transaction-pool-api = { version = "*" }
sp-api = { version = "*" }
sp-block-builder = { version = "*" }
sp-blockchain = { version = "*" }
sp-consensus-aura = { version = "*" }
sp-core = { version = "*" }
sp-keystore = { version = "*" }
sp-io = { version = "*" }
sp-runtime = { version = "*" }
sp-timestamp = { version = "*" }
substrate-frame-rpc-system = { version = "*" }
substrate-prometheus-endpoint = { pversion = "*" }

# Polkadot
polkadot-cli = { version = "*", features = ["rococo-native"] }
polkadot-primitives = { version = "*" }
xcm = { package = "staging-xcm", version = "*", default-features = false }

# Cumulus
cumulus-client-cli = { version = "*" }
cumulus-client-collator = { version = "*" }
cumulus-client-consensus-aura = { version = "*" }
cumulus-client-consensus-common = { version = "*" }
cumulus-client-consensus-proposer = { version = "*" }
cumulus-client-service = { version = "*" }
cumulus-primitives-core = { version = "*" }
cumulus-primitives-parachain-inherent = { version = "*" }
cumulus-relay-chain-interface = { version = "*" }
color-print = "0.3.4"

[build-dependencies]
substrate-build-script-utils = { version = "*"}

[features]
default = []
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"parachain-template-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"parachain-template-runtime/try-runtime",
	"polkadot-cli/try-runtime",
	"sp-runtime/try-runtime",
]
